src/test/deca/codegen/valid/objet/ReturnWhile.deca
// Description :
//    Test génération de code while et return
//
// Resultats decac:
// Resultat ima: 0

class A {
    int x = 0;
    int y;

    int Test() {
        while (x == 0){
            return x;
        }
        return 10;
    }
}
{
    A a =  new A();
    
    println(a.Test());
}
