src/test/deca/codegen/invalid/objet/Error/DeferencementNullSelection.deca
// Erreur : dereferencement de null
// Description : Deferencement null dans une selection
// Resultat : erreur lors de ima


class A{
    float x = 1.0;
    float y = 0.1;
   
    void Test(){
        float z = x/y;
    }
}
{
    A a = null;
    float y = a.x;
}

